--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -5,9 +5,9 @@
 
     .about-bg-shape {
         position: absolute;
-        top: -40%;
+        top: 0;
         right: 0;
-        width: 15%;
+        width: 12%;
     }
 
     .about-container {
