--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -5,9 +5,9 @@
 
     .services-bg-shape {
         position: absolute;
-        top: 8%;
+        top: 0;
         left: 0;
-        width: 15%;
+        width: 12%;
         z-index: -1;
     }
 
